; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_freebsd.c_uv_get_free_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_freebsd.c_uv_get_free_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"vm.stats.vm.v_free_count\00", align 1
@errno = common dso_local global i32 0, align 4
@_SC_PAGESIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_get_free_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 4, i64* %3, align 8
  %4 = call i64 @sysctlbyname(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32* %2, i64* %3, i32* null, i32 0)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @errno, align 4
  %8 = call i32 @UV__ERR(i32 %7)
  store i32 %8, i32* %1, align 4
  br label %14

9:                                                ; preds = %0
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @_SC_PAGESIZE, align 4
  %12 = call i32 @sysconf(i32 %11)
  %13 = mul nsw i32 %10, %12
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %9, %6
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i64 @sysctlbyname(i8*, i32*, i64*, i32*, i32) #1

declare dso_local i32 @UV__ERR(i32) #1

declare dso_local i32 @sysconf(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
